See CNK - need to talk more about how big data will solve this

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -17,6 +17,10 @@
 \end{itemize}
 I hypothesize that if \textsc{CSC} were to ingest the \gls{merra} archive, as well as other publicly available data sets, into a corporately managed data store with an analytical layer above, we could eliminate the dependency on NASA's Giovanni summary interface, as well as expanding the capabilities offered by \climatedge. By utilizing results based on analytics computed over the entire data set, we could add a quantitative probability to the existing qualitative analysis of \climatedge prediction reports. The technology, skills, and infrastructure used in the creation of the proprietary \gls{merra} solution, would be transferable to other big data projects within the company as a whole.\\
 
+
+CNK -we need to say something here about prediction
+
+
 Implementing a quantitative analysis component in a \ce service allows for several competitive advantages:
 \begin{itemize}
     \item{the ingestion of additional datasets such as \textsc{ENSO}, \textsc{NAO/AO}, and \textsc{PDO}\cite[p. 1]{methods}}
