--- a/chapter2.bib
+++ b/chapter2.bib
@@ -36,3 +36,19 @@
     howpublished = {\url{http://jenkins-ci.org}},
     note = "Online; accessed 22-February-2013"
 }
+
+@misc{cassandra,
+    author = {Cassandra},
+    title = {{The Apache Cassandra Project}},
+    year = 2013,
+    howpublished = {\url{http://cassandra.apache.org}},
+    note = "Online; accessed 24-February-2013"
+}
+
+@misc{materialized_views,
+    author = {Wikipedia},
+    title = {{Materialized Views}},
+    year = 2013,
+    howpublished = {\url{http://en.wikipedia.org/wiki/Materialized_view}},
+    note = "Online; accessed 24-February-2013"
+}
