updates for graphics in chapter2

--- a/index.tex
+++ b/index.tex
@@ -7,7 +7,7 @@
 %	\setmainfont{Birka LT Pro}
 	\setmainfont{Kepler Std Light}
 	\setsansfont[Mapping=tex-text]{Myriad Pro}
-	\setmonofont[Scale=MatchLowercase]{Monaco}
+	\setmonofont[Scale=MatchLowercase]{Anonymous Pro}
 \usepackage{titlesec}
 \titleformat{\chapter}[display]
     {\huge\bfseries\sffamily}{\chaptertitlename\ \thechapter}{20pt}{\Large}[\titlerule]
@@ -18,7 +18,7 @@
 \makeindex
 \usepackage[acronym,toc]{glossaries}
 \makeglossaries
-\usepackage{graphicx}
+\usepackage{graphicx}   % this handles the non-native charts
 \usepackage[sectionbib]{chapterbib} % this handles references per chapter
 % this handles the risk equation -- may not be necessary
 %\usepackage{amsmath}
