--- a/chapter2.tex
+++ b/chapter2.tex
@@ -25,8 +25,8 @@ Combinations of the data sets listed above can vary in size from a few hundred g
 \begin{itemize}
 	\item retrieving data updates
 	\item storing and indexing for optimal retrieval
-	\item performing both real time and batch analytics
-	\item presenting analysis results
+	\item data discovery and analytics
+	\item presenting real-time and offline results
 \end{itemize}
 \subsection*{Data Acquisition}
 As all the data is freely available via standard HTTP requests, we simply need to put together a framework consisting of a repeatable process that polls each website for newly published data and retrieves it. If necessary, the framework can check with the data store to confirm what's new and what's not. Putting together such a framework is a relatively simple systems integration and development task and has plenty of prior art across the industry. I'd recommend the following components:
@@ -67,10 +67,16 @@ temporal
 geospatial
 variable
 
-\subsection*{Analytics}
+\subsection*{Discovery and Analytics}
 
 \subsection*{Presentation}
+dfkajdflkajsdf;lkasjdf;aklsdfja;lskdfjasdf\\
 
+\begin{figure}[htbp]
+    \centering
+%    \caption*{Data flow by layer}
+    \includegraphics[scale=.9]{dataflow}
+\end{figure}
 
 %\begingroup
     % this removes the chapter title for the in-chapter bibliography
