--- a/chapter2.tex
+++ b/chapter2.tex
@@ -14,10 +14,10 @@ A primary carrier of property and casualty insurance would potentially be very i
 \end{itemize}
 A working group, consisting of Dr. Christopher Anderson, Dr. Dan Walker, and myself, has determined that the data layer for tornado prediction should contain the following data sets [unpublished, 2013]:
 \begin{itemize}
-    \item \gls{merra} 3D historical\cite{mdisc}
-    \item \gls{soi} historical archives\cite{bom}
-    \item \gls{tvs} and \gls{mda}\cite{hdss} 
-    \item \gls{ncdc} historical tornado report\cite{ncdc}
+    \item 2.5 TB of \gls{merra} 3D historical \cite{mdisc}
+    \item 1 MB of \gls{soi} historical archives \cite{bom}
+    \item 100 MB of \gls{tvs} and \gls{mda} \cite{hdss}
+    \item 1.5 TB of \gls{ncdc} historical tornado report \cite{ncdc}
 \end{itemize}
 All of this data is in the public domain and freely available to anyone that has the resources to store and analyze it. As mentioned in chapter one, currently CSC uses only the summary information provided by Giovanni in the \climatedge product. While Giovanni has the advantage of requiring no local computational resources, it represents the tip of the proverbial data iceberg and does not help in quantitative prediction.\\
 
@@ -32,7 +32,7 @@ Combinations of the data sets listed above can vary in size from a few hundred g
 As all the data is freely available via standard HTTP requests, we simply need to put together a framework consisting of a repeatable process that polls each website for newly published data and retrieves it. If necessary, the framework can check with the data store to confirm what's new and what's not. Putting together such a framework is a relatively simple systems integration and development task and has plenty of prior art across the industry. I'd recommend the following components:
 \begin{itemize}
 	\item Three Linux instances to handle retrieval, monitoring, and hosting the source code repository, respectively.
-	\item Jenkins for continually monitoring and notifying the success or failure of the retrieval processes (one per data set). Jenkins will also serve as the means to deploy the most recent code from the code repository onto the server handling the retrieval process. Jenkins is open source and used commonly across the industry for this purpose, resulting in an easily hirable skill set.\cite{jenkins}
+	\item Jenkins for continually monitoring and notifying the success or failure of the retrieval processes (one per data set). Jenkins will also serve as the means to deploy the most recent code from the code repository onto the server handling the retrieval process. Jenkins is open source and used commonly across the industry for this purpose, resulting in an easily hirable skill set \cite{jenkins}
 	\item A repeatable method, such as Cron, to check and retrieve updated data sets at well defined publication intervals. Jenkins will monitor the success or failure of the cron jobs and notify as needed.
 	\item Developed code that contacts each web server and pulls down only the most recent data. If the data sets do not offer a simple means of determining what's recent, this code can query the data store so that it's aware of the last stored data. While we need unique code for each data set, the process of determining what's new and retrieving the code should be very similar across all the data sets. It's likely there will a reusable common library of functionality across each specific implementation. This development is likely to be done in a scriptable environment such as Python or Perl. The languages offer an excellent tradeoff between simplicity, flexibility, and execution speed.
 \end{itemize}
