finish chapter 2 and add point in as a reference

--- a/chapter2.bib
+++ b/chapter2.bib
@@ -52,3 +52,11 @@
     howpublished = {\url{http://en.wikipedia.org/wiki/Materialized_view}},
     note = "Online; accessed 24-February-2013"
 }
+
+@misc{point_in,
+    author = {CSC},
+    title = {{POINT IN Development}},
+    year = 2013,
+    howpublished = {\url{https://c3.csc.com/groups/point-in-developmen?view=over}},
+    note = "Online; accessed 10-March-2013"
+}
