update group to reflect move

--- a/title.tex
+++ b/title.tex
@@ -4,7 +4,7 @@
 	\begin{center}
 		\textbf{\huge Christopher Keller}\\[1cm]
         \textit{Quantitative Prediction Adds Significant Enhancement to \climatedge}\\ [.5cm]
-		\normalsize High Performance Computing\\ [.5cm]
+		\normalsize Data Services\\ [.5cm]
         \normalsize \today
 	\end{center}
 	\vspace*{\fill}
