only verifiable references should be stated

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -21,7 +21,7 @@ I hypothesize that if \textsc{CSC} were to ingest the \gls{merra} archive, as we
 
 Implementing a predictive quantitative analysis component in a \ce service allows for competitive advantages over the existing approaches:
 \begin{itemize}
-    \item{the ingestion of additional datasets such as \textsc{ENSO}, \textsc{NAO/AO}, and \textsc{PDO} adds more detail\cite[p. 1]{methods}}
+    \item{the ingestion of additional datasets such as \textsc{ENSO}, \textsc{NAO/AO}, and \textsc{PDO} adds more detail [personal communication, 2012]}
     \item the ability to organize and retrieve data for visualization and exploration, e.g., by time, by geographical location, by specific measurement, etc
 \end{itemize}
 Additionally, once we have a quantitative platform capable of storing and analyzing heterogeneous climate data sets, we can go one step further in terms of offering this as a service:
@@ -29,7 +29,7 @@ Additionally, once we have a quantitative platform capable of storing and analyz
     \item{the ability to scale solution delivery to the customer, e.g., on-demand analytics and reporting, etc}
     \item{unique customer portals with industry focused data sets}
 \end{itemize}
-In conversations with Dr. Christopher Anderson and Dr. Dan Walker, I have identified three use cases in which a \ce service can benefit the risk insurance industry[personal communication, 2013]:
+In conversations with Dr. Christopher Anderson and Dr. Dan Walker, I have identified three use cases in which a \ce service can benefit the risk insurance industry [personal communication, 2013]:
 \begin{itemize}
     \item tornado prediction
     \item flood prediction
