--- a/introduction.tex
+++ b/introduction.tex
@@ -6,10 +6,21 @@
 \newacronym{html}{HTML}{Hyper Text Markup Language}
 \newacronym{sme}{SME}{Subject Matter Expert}
 \newacronym{pdf}{PDF}{Portable Document Format}
-\chapter{Introduction}
+\section*{Introduction}
 Everywhere we turn, the big data movement is changing how industries are collecting, analyzing, and responding to the data around them. Efforts, by the Korean Meteorological Administration, are underway to upgrade the ability to predict weather patterns and the severity of weather events across the South Korean peninsula. IBM is engaged in similar work in New York City and Rio de Janeiro, in preparation for the 2014 Olympiad, with goals of accurately predicting short term weather\cite{rwe}. What if the vast repositories of weather and climate data could be collected, stored, and analyzed by current distributed processing algorithms to produce climate predictions months, not weeks, in advance?\\
 
 \textsc{CSC's} \climatedge reports service offers the financial, utilities and agriculture risk industries a view into climate prediction based on proprietary analysis of public data. The monthly reports include Global Agriculture, Global Energy, Sugar and Soft Commodities, Grain and Oilseeds, and Energy/Natural Gas\cite{climatedgeurl}. The current method of generating these reports takes a high level cursory analysis and only analyzes a fraction of the data that is available. By applying big data \index{big data} storage and analytics technologies, I will show that \textsc{CSC} can quantitatively analyze more data and modernize the production of \climatedge reports. The resulting climate models will have greater confidence and be of more value to our customers.\\
+
+%^--- csc made a strageic decision to move away from this business model, ie this is the old version. 
+% climatedg1 1.0 qualitative reports for commodities traders closed down and why (anne marie)
+%    annie marie can provide logic on why that is
+% 2.0 is a pivot and we're working on quantitative prediction for general insurance
+% the pivot supports that qualitative portion of my hypothesis doesn't work
+% we asume this info is adequate to determine there is a need on the part of the client, so we're going to focus on how we would do this
+% what will people buy and what's it take to deliver it <--- this is really important
+
+
+
 
 \climatedge reports are based off knowledge acquired by programmatically parsing and summarizing the \gls{html} interface of the Giovanni\cite{giovanni} portal to the NASA \gls{merra} data site.  A \textsc{CSC} \gls{sme} then takes this data collection, adds analysis and annotations, and generates a \gls{pdf} report which details the risk potential thirty to sixty days in the future. In contrast, typical industry reports focus on seven to fourteen days in the future. There are a few drawbacks with this approach:
 \begin{itemize}
@@ -17,11 +28,28 @@ Everywhere we turn, the big data movement is changing how industries are collect
     \item{reports are generated per industry rather than per customer}
     \item{reports are resource intensive to produce}
 \end{itemize}
+
+%these bullets dont' specify that they are qualitative
+
+
 I hypothesize that if \textsc{CSC} were to ingest the \gls{merra} archive, as well as other publicly available data sets, into a corporately managed data store with an analytical layer above, we could eliminate the dependency on NASA's Giovanni summary interface, as well as expand the capabilities offered by \climatedge into new market segments. By utilizing results based on analytics computed over the entire data set, we could add a quantitative probability to the existing qualitative analysis of \climatedge prediction reports. The technology, skills, and infrastructure used in the creation of the proprietary \gls{merra} solution, would be transferable to other big data projects within the company as a whole.\\
+
+% remove personal pronouns
+ 
+%CSC has already decided to move into new market segments, this opens up tornado analytics
+
+
 
 Implementing a predictive quantitative analysis component in a \ce service allows for competitive advantages over the existing approaches:
 \begin{itemize}
     \item{the ingestion of additional datasets such as \textsc{ENSO}, \textsc{NAO/AO}, and \textsc{PDO} adds more detail [personal communication, 2012]}
+    
+   ENSO, NAO, PDO  these are not data sets, 
+        SOI or sea surface temperature instead of ENSO
+        
+        consider taking this section out since it's in chapter 2
+        
+    
     \item the ability to organize and retrieve data for visualization and exploration, e.g., by time, by geographical location, by specific measurement, etc
 \end{itemize}
 Additionally, once we have a quantitative platform capable of storing and analyzing heterogeneous climate data sets, we can go one step further in terms of offering this as a service:
@@ -35,7 +63,7 @@ In conversations with Dr. Christopher Anderson and Dr. Dan Walker, I have identi
     \item flood prediction
     \item commodities trading
 \end{itemize}
-By focusing on predictive analytics using large data sets we can use the following equation for the risk insurance industry:
+By focusing on predictive analytics using large data sets we can use the following equation for the risk insurance industry: CNK - we need to indicate that for this paper we're limiting to tornado
 \begin{equation*}
     Risk = Impact \cdot Probability
 \end{equation*}
@@ -44,7 +72,7 @@ The current implementation of \climatedge can not address either of these variab
 %\begingroup
     % this removes the chapter title for the in-chapter bibliography
 %    \renewcommand{\chapter}[2]{}% for other classes
-\renewcommand\bibname{{References}}
-\bibliographystyle{plain}
-\bibliography{chapter1}
+%\renewcommand\bibname{{References}}
+%\bibliographystyle{plain}
+%\bibliography{chapter1}
 %\endgroup
