--- a/tornado.tex
+++ b/tornado.tex
@@ -5,7 +5,7 @@
 \newacronym{tvs}{TVS}{National Tornado Vortex Signature}
 \newacronym{mda}{MDA}{National Mesoscyclone Detection Algorithm}
 
-\section*{Case Study: Tornado}
+\section{Case Study: Tornado}
 
 CNK - why am i focusing on tornado (dan provides research). There are some hail modesl on the market for catosptrophic risk 
 
@@ -41,16 +41,16 @@ We can represent each layer graphically, building on the layer to its left.
     \includegraphics[scale=.75]{dataflow}
 \end{figure}
 
-\subsection*{Data Acquisition}
+\subsection{Data Acquisition}
 As all the data is freely available via standard HTTP requests, we simply need to put together a framework consisting of a repeatable process that polls each website for newly published data and retrieves it. If necessary, the framework can check with the data store to confirm what's new and what's not. Putting together such a framework is a relatively simple systems integration and development task and has plenty of prior art across the industry. I'd recommend the following components:
 \begin{itemize}
 	\item Three Linux instances to handle retrieval, monitoring, and hosting the source code repository, respectively.
-	\item A continuous integration tool, such as Jenkins, for continually monitoring and notifying the success or failure of the retrieval processes (one per data set). Jenkins will also serve as the means to deploy the most recent code from the code repository onto the server handling the retrieval process. Jenkins is open source and used commonly across the industry for this purpose, resulting in an easily hirable skill set \cite{jenkins}.
+	\item A continuous integration tool, Jenkins or similar, for continually monitoring and notifying the success or failure of the retrieval processes (one per data set). Jenkins will also serve as the means to deploy the most recent code from the code repository onto the server handling the retrieval process. Jenkins is open source and used commonly across the industry for this purpose, resulting in an easily hirable skill set \cite{jenkins}.
 	\item A repeatable method, such as Cron, to check and retrieve updated data sets at well defined publication intervals. Jenkins will monitor the success or failure of the cron jobs and notify as needed.
 	\item Developed code that contacts each web server and pulls down only the most recent data. If the data sets do not offer a simple means of determining what's recent, this code can query the data store so that it's aware of the last stored data. While we need unique code for each data set, the process of determining what's new and retrieving the code should be very similar across all the data sets. It's likely there will a reusable common library of functionality across each specific implementation. This development is likely to be done in a scriptable environment such as Python or Perl. The languages offer an excellent tradeoff between simplicity, flexibility, and execution speed.
 \end{itemize}
 
-\subsection*{Storing and Indexing}
+\subsection{Storing and Indexing}
 Once the data has arrived on the local system, it needs to processed and inserted into the data store. This layer is the heart of any service offering. The data store must have the following characteristics:
 \begin{itemize}
 	\item Not inherently possess a single point of failure
@@ -75,10 +75,10 @@ There exist several technologies in the top level Apache Hadoop project, one bei
 \end{table}
 With this simple structure and specific materialized views \index{materialized views}\cite{materialized_views}, we enable analytics based on any combination of the following searches: temporal, geospatial, or by meta-data.
 
-\subsection*{Discovery and Analytics}
+\subsection{Discovery and Analytics}
 The technology behind big data storage is really only interesting to engineers. What we want are the results of the stored data analysis. For tornado prediction, the specific analytic we'd produce is a 50km x50km (based on input data granularity) geo-spatial grid of predictions of the probability of tornado occurrences expressed as a Poisson distribution [unpublished, 2013]. This analytic would be computed twice a year in the months leading up to the tornado season in order to give the carriers enough time to react to the data.
 
-\subsection*{Presentation}
+\subsection{Presentation}
 It's possible to represent the resulting Poisson distribution in a number of ways, either textually or graphically. While an interactive \gls{html} geographical map may best present the results for human consumption, the goal should be to get the information into a system capable of overlaying it with parcel and policy data so as to present a complete picture for decision making. CSC has a policy administration tool for insurance carriers known as POINT IN \cite{point_in}. This product is widely used, making it an ideal platform to ingest the results of our predictive analytics as serialized XML containing the Poisson probabilities for each geographical grid.\\
 
 At this point, we have a fully automated platform capable of generating predictive analytics twice a year and delivering those results electronically into an industry standard administration platform. With the future tornado probabilities by grid location, combined with the parcel and policy information, the insurance carriers now have ability to make fundamental business decisions such as: do we have enough funds to cover expected losses, do we renew policies for high probability areas, is predicted income balanced against probable risk, as well as giving another data point against fraudulent damage claims. 
